--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -2,12 +2,19 @@
   .container-fluid
     .collapse.navbar-collapse
       .navbar-header
-        .navbar-brand
+        %a.navbar-brand{href: root_path}
           - if user_signed_in?
             Hi,
             = current_user.login
           - else
             Hi, Guest
+        %a.navbar-brand{href: modes_change_path(mode: 1), style: "#{'color:red;' if cookies[:demo_mode] == '0' } margin-left: 100px;"}
+          Session
+        %a.navbar-brand{href: modes_change_path(mode: 2), style: "#{'color:red;' if cookies[:demo_mode] == '1' }"}
+          Cookie
+        %a.navbar-brand{href: modes_change_path(mode: 3), style: "#{'color:red;' if cookies[:demo_mode] == '2' }"}
+          3
+
       %ul.nav.navbar-nav.navbar-right
         - if user_signed_in?
           %li= link_to 'Logout', sessions_path, method: :delete
