--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,7 +7,7 @@
       %th
         Login
       %th
-        Password(crypt)
+        Password(encoded)
       %th
         Created at
     - @users.each do |user|
