--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -15,10 +15,10 @@ table {
   position: absolute;
   left: 300px;
   a {
-    border-left: 1px solid white;
+    border-left: 1px solid #a7a7a7;
     margin-right: 10px;
   }
   a:last-child {
-    border-right: 1px solid white;
+    border-right: 1px solid #a7a7a7;
   }
 }
