--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,5 @@
-.col-md-2
-.col-md-8
+.col-md-3
+.col-md-6
   %table.table-bordered
     %tr
       %th
@@ -11,7 +11,7 @@
       %th
         Created at
     - @users.each do |user|
-      %tr
+      %tr{style: "#{'border: 2px solid red;' if @current_user && @current_user.id == user.id}"}
         %td
           = user.id
         %td
