--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,35 @@
 .col-md-3
+  .jumbotron
+    .SnCshow
+      - if cookies[:demo_mode] == '0'
+        session[:user_id] =
+        = session[:user_id] || 'nil'
+
+      - elsif cookies[:demo_mode] == '1'
+        cookies[:user_id] =
+        = cookies[:user_id] || 'nil'
+
+      - elsif cookies[:demo_mode] == '2'
+        cookies[:auth_token] =
+        = cookies[:auth_token] || 'nil'
+
+      - elsif cookies[:demo_mode] == '3'
+        session[:user_id_auth] =
+        = session[:user_id_auth] || 'nil'
+        %br
+        cookies[:auth_token_session] =
+        = cookies[:auth_token_session] || 'nil'
+      - else
+        %div{style: 'color:red;'} Please select mode
+        %a{href: modes_change_path(mode: 0), style: "#{'color:red;' if cookies[:demo_mode] == '0' }"}
+          Session
+        %a{href: modes_change_path(mode: 1), style: "#{'color:red;' if cookies[:demo_mode] == '1' }"}
+          Cookie
+        %a{href: modes_change_path(mode: 2), style: "#{'color:red;' if cookies[:demo_mode] == '2' }"}
+          AuthToken
+        %a{href: modes_change_path(mode: 3), style: "#{'color:red;' if cookies[:demo_mode] == '3' }"}
+          AuthToken + Session
+
 .col-md-6
   %table.table-bordered
     %tr
