--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,5 @@
 .col-md-3
-  .jumbotron
+  .jumbotron{ style: 'padding: 20px; border: 1px solid #bbb; box-shadow: 1px 1px 5px rgba(0,0,0,0.4);' }
     .SnCshow
       - if cookies[:demo_mode] == '0'
         session[:user_id] =
