--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <div class="alert alert-<%= key %>"><%= value %></div>
 <% end %>
 
+<!--<fb:login-button scope="public_profile, email" onlogin="checkLoginState();">-->
+<!--</fb:login-button>-->
+
 <%= yield %>
 
 </body>
