--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,10 +2,10 @@
   .jumbotron{ style: 'padding: 20px; border: 1px solid #bbb; box-shadow: 1px 1px 5px rgba(0,0,0,0.4);' }
     .SnCshow
       session[:user_id_auth] =
-      = session[:user_id_auth] || 'nil'
+      = session[:user_id] || 'nil'
       %br
       cookies[:auth_token_session] =
-      = cookies[:auth_token_session] || 'nil'
+      = cookies[:auth_token] || 'nil'
 
 .col-md-6
   %table.table-bordered
