--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -14,3 +14,4 @@
         = f.password_field :password_confirmation, class: 'form-control'
       .form-group
         = f.submit class: 'btn btn-default'
+        = render 'layouts/social_links'
